# aws-ai-agent-bus

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  CLAUDE.md  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  EXAMPLES.md  INTEGRATION_ROADMAP.md  LICENSE  Makefile  README.md  VALIDATION_REPORT.md  blog-post-ga-integration.md  bun.lockb  docker-compose.test.yml  mcp-config.json  mcp_servers.json  package-lock.json  package.json  test-event-health.json  test-integration-event.json  test-monitored-event.json  test-notification.json  test-server.js
.claude/: .env.example  README.md  mesh-agent-config.json  settings.local.json
.tooling/: lint.sh
dashboard-server/: .env.example  Dockerfile  ERROR_HANDLING_EXAMPLE.md  EVENTS.md  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.ts
dashboard-ui/: .env.development  .env.example  .env.production  .gitignore  DRY_RUN_SYSTEM.md  FEATURE_FLAGS.md  PHASE4_WORKFLOW_EVENTS.md  (+19 more)
mcp-rust/: .gitignore  Cargo.toml  Dockerfile.build  README.md  debug_server.py
mcp-rust/src/: aws.rs  aws_minimal.rs  handlers.rs  lib.rs  main.rs  mcp.rs  rate_limiting.rs  registry.rs  tenant.rs
mcp-rust/src/handlers/: integrations.rs  mcp_proxy.rs
mcp-rust/tests/: README.md  concurrency_test.rs  mcp_tests.rs  test_lifecycle.rs
mcp-rust/tests/e2e/: test_mcp_fixes.js
mcp-rust/tests/integration/: events_integration_test.rs  mcp_integration_test.rs  mod.rs
mcp-rust/tests/unit/: events_handlers_test.rs  mcp_protocol_compliance_tests.rs  mod.rs
(+746 files in other folders)
